Bank Churn Dataset

--- a/Binary Classification with a Bank Churn Dataset/Binary Classification with a Bank Churn Dataset.ipynb
+++ b/Binary Classification with a Bank Churn Dataset/Binary Classification with a Bank Churn Dataset.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "bf946874",
+   "metadata": {},
+   "source": [
+    "Problem LINK --> <a href = \"https://www.kaggle.com/competitions/playground-series-s4e1/overview\">[LINK]</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bdd065f2",
    "metadata": {},
    "source": [
@@ -217,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6da1e719",
    "metadata": {},
    "outputs": [],
@@ -228,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "79933ab2",
    "metadata": {},
    "outputs": [],
@@ -239,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "64a21e5c",
    "metadata": {},
    "outputs": [],
@@ -258,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "014a446c",
    "metadata": {},
    "outputs": [],
@@ -270,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b2b282cd",
    "metadata": {},
    "outputs": [],
@@ -281,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "44932ee3",
    "metadata": {},
    "outputs": [
@@ -416,7 +424,7 @@
        "4             1.0         15068.83       0    1       0      1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "661038dd",
    "metadata": {},
    "outputs": [],
@@ -446,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "dcf24b2e",
    "metadata": {},
    "outputs": [],
@@ -465,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a27a6e9f",
    "metadata": {},
    "outputs": [],
@@ -485,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "63a84b61",
    "metadata": {},
    "outputs": [],
@@ -506,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "de1b0a9c",
    "metadata": {},
    "outputs": [],
@@ -516,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "1237c127",
    "metadata": {},
    "outputs": [
@@ -524,47 +532,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "2063/2063 [==============================] - 4s 2ms/step - loss: 0.3435 - accuracy: 0.8560 - val_loss: 0.3304 - val_accuracy: 0.8607\n",
-      "Epoch 2/10\n",
-      "2063/2063 [==============================] - 3s 2ms/step - loss: 0.3265 - accuracy: 0.8637 - val_loss: 0.3254 - val_accuracy: 0.8629\n",
-      "Epoch 3/10\n",
-      "2063/2063 [==============================] - 4s 2ms/step - loss: 0.3246 - accuracy: 0.8636 - val_loss: 0.3247 - val_accuracy: 0.8639\n",
-      "Epoch 4/10\n",
-      "2063/2063 [==============================] - 3s 1ms/step - loss: 0.3236 - accuracy: 0.8642 - val_loss: 0.3281 - val_accuracy: 0.8625\n",
-      "Epoch 5/10\n",
-      "2063/2063 [==============================] - 3s 1ms/step - loss: 0.3231 - accuracy: 0.8645 - val_loss: 0.3253 - val_accuracy: 0.8629\n",
-      "Epoch 6/10\n",
-      "2063/2063 [==============================] - 3s 2ms/step - loss: 0.3224 - accuracy: 0.8647 - val_loss: 0.3256 - val_accuracy: 0.8625\n",
-      "Epoch 7/10\n",
-      "2063/2063 [==============================] - 3s 2ms/step - loss: 0.3223 - accuracy: 0.8650 - val_loss: 0.3235 - val_accuracy: 0.8647\n",
-      "Epoch 8/10\n",
-      "2063/2063 [==============================] - 3s 1ms/step - loss: 0.3222 - accuracy: 0.8647 - val_loss: 0.3255 - val_accuracy: 0.8627\n",
-      "Epoch 9/10\n",
-      "2063/2063 [==============================] - 3s 2ms/step - loss: 0.3218 - accuracy: 0.8645 - val_loss: 0.3242 - val_accuracy: 0.8635\n",
-      "Epoch 10/10\n",
-      "2063/2063 [==============================] - 3s 2ms/step - loss: 0.3214 - accuracy: 0.8653 - val_loss: 0.3234 - val_accuracy: 0.8638\n"
+      "Epoch 1/20\n",
+      "2063/2063 [==============================] - 8s 3ms/step - loss: 0.3470 - accuracy: 0.8540 - val_loss: 0.3324 - val_accuracy: 0.8596\n",
+      "Epoch 2/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3274 - accuracy: 0.8625 - val_loss: 0.3257 - val_accuracy: 0.8630\n",
+      "Epoch 3/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3249 - accuracy: 0.8634 - val_loss: 0.3259 - val_accuracy: 0.8622\n",
+      "Epoch 4/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3239 - accuracy: 0.8641 - val_loss: 0.3251 - val_accuracy: 0.8630\n",
+      "Epoch 5/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3233 - accuracy: 0.8644 - val_loss: 0.3246 - val_accuracy: 0.8628\n",
+      "Epoch 6/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3231 - accuracy: 0.8644 - val_loss: 0.3245 - val_accuracy: 0.8633\n",
+      "Epoch 7/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3225 - accuracy: 0.8645 - val_loss: 0.3246 - val_accuracy: 0.8628\n",
+      "Epoch 8/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3222 - accuracy: 0.8649 - val_loss: 0.3241 - val_accuracy: 0.8638\n",
+      "Epoch 9/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3218 - accuracy: 0.8643 - val_loss: 0.3246 - val_accuracy: 0.8634\n",
+      "Epoch 10/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3217 - accuracy: 0.8649 - val_loss: 0.3235 - val_accuracy: 0.8640\n",
+      "Epoch 11/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3214 - accuracy: 0.8651 - val_loss: 0.3243 - val_accuracy: 0.8633\n",
+      "Epoch 12/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3213 - accuracy: 0.8648 - val_loss: 0.3240 - val_accuracy: 0.8637\n",
+      "Epoch 13/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3211 - accuracy: 0.8653 - val_loss: 0.3237 - val_accuracy: 0.8634\n",
+      "Epoch 14/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3210 - accuracy: 0.8654 - val_loss: 0.3241 - val_accuracy: 0.8633\n",
+      "Epoch 15/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3207 - accuracy: 0.8650 - val_loss: 0.3238 - val_accuracy: 0.8632\n",
+      "Epoch 16/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3205 - accuracy: 0.8654 - val_loss: 0.3240 - val_accuracy: 0.8646\n",
+      "Epoch 17/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3205 - accuracy: 0.8648 - val_loss: 0.3238 - val_accuracy: 0.8642\n",
+      "Epoch 18/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3203 - accuracy: 0.8650 - val_loss: 0.3238 - val_accuracy: 0.8628\n",
+      "Epoch 19/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3200 - accuracy: 0.8656 - val_loss: 0.3264 - val_accuracy: 0.8621\n",
+      "Epoch 20/20\n",
+      "2063/2063 [==============================] - 6s 3ms/step - loss: 0.3201 - accuracy: 0.8655 - val_loss: 0.3240 - val_accuracy: 0.8633\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x1fc0d08beb0>"
+       "<keras.src.callbacks.History at 0x1c671f7e4d0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the model\n",
-    "model.fit(X_train, y_train, epochs=10, batch_size=64, validation_data=(X_val, y_val))"
+    "model.fit(X_train, y_train, epochs=20, batch_size=64, validation_data=(X_val, y_val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "9548d941",
    "metadata": {},
    "outputs": [
@@ -572,7 +600,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for train data: 86.57168745994568%\n"
+      "Accuracy for train data: 86.62773370742798%\n"
      ]
     }
    ],
@@ -584,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "99cd43e3",
    "metadata": {},
    "outputs": [
@@ -592,7 +620,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for validation data: 86.38470768928528%\n"
+      "Accuracy for validation data: 86.33320331573486%\n"
      ]
     }
    ],
@@ -612,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "77e8e358",
    "metadata": {},
    "outputs": [
@@ -735,7 +763,7 @@
        "4        1.0             0.0        139431.00  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "754d0ee4",
    "metadata": {},
    "outputs": [],
@@ -773,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "dcb580e1",
    "metadata": {},
    "outputs": [
@@ -902,7 +930,7 @@
        "4             0.0        139431.00    1       0      0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "b94fce43",
    "metadata": {
     "scrolled": true
@@ -926,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "b32e2395",
    "metadata": {},
    "outputs": [
@@ -934,7 +962,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3439/3439 [==============================] - 3s 815us/step\n"
+      "3439/3439 [==============================] - 6s 2ms/step\n"
      ]
     }
    ],
@@ -951,7 +979,7 @@
    "outputs": [],
    "source": [
     "# Add CustomerID from the test dataset\n",
-    "submission_df = pd.concat([df_test['CustomerId'], pd.DataFrame(predictions, columns=['Exited'])], axis=1)"
+    "submission_df = pd.concat([df_test['id'], pd.DataFrame(predictions, columns=['Exited'])], axis=1)"
    ]
   },
   {
@@ -975,18 +1003,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.390048    3\n",
-      "0.102528    3\n",
-      "0.878370    2\n",
-      "0.197869    2\n",
-      "0.111878    2\n",
+      "0.456237    3\n",
+      "0.096271    3\n",
+      "0.014331    2\n",
+      "0.013432    2\n",
+      "0.058360    2\n",
       "           ..\n",
-      "0.013223    1\n",
-      "0.108499    1\n",
-      "0.194727    1\n",
-      "0.017475    1\n",
-      "0.176277    1\n",
-      "Name: Exited, Length: 109692, dtype: int64\n"
+      "0.015928    1\n",
+      "0.095747    1\n",
+      "0.149582    1\n",
+      "0.012040    1\n",
+      "0.240988    1\n",
+      "Name: Exited, Length: 109604, dtype: int64\n"
      ]
     }
    ],
